test_outputs/connlist/acs-security-demos_focus_workload_frontend_webapp_exposure_output.txt
frontend/webapp[Deployment] => backend/checkout[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/recommendation[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/reports[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/shipping[Deployment] : TCP 8080
{ingress-controller} => frontend/webapp[Deployment] : TCP 8080

Exposure Analysis Result:
Egress Exposure:
frontend/webapp[Deployment] 	=> 	entire-cluster : UDP 5353

Ingress Exposure:
frontend/webapp[Deployment] 	<= 	entire-cluster : TCP 8080
